--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.forge</groupId>
             <artifactId>forge-scaffold-api</artifactId>
             <version>${forge.api.version}</version>
