--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 jdk:
   - openjdk7
   - oraclejdk7
+  - openjdk6
+  - oraclejdk6
 before_install:
   - echo "before install phase"
 install:
